<resources>
    <string name="app_name">Travel Finances</string>
    <string name="username_hint">Nome de Usuário</string>
    <string name="password_hint">Senha</string>
    <string name="email_hint">Email</string>
    <string name="confirmar_password_hint">Confirmar senha</string>
    <string name="login_button_text">Login</string>
    <string name="salvar_button_text">Salvar</string>
    <string name="cretelogin_button_text">Criar conta</string>
    <string name="forgot_password_text">Esquece sua senha?</string>
    <string name="reservar_todas_button_text">Reservar todas</string>
</resources>
