<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/iconlogo"
            android:layout_marginTop="120dp"/>

        <EditText
            android:id="@+id/editTextUsernameCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:hint="@string/username_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextEmailCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextPasswordCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
            app:layout_constraintStart_toStartOf="@+id/editTextUsername"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

        <EditText
            android:id="@+id/editTextPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/confirmar_password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
            app:layout_constraintStart_toStartOf="@+id/editTextUsername"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

        <Button
            android:id="@+id/buttonSalvarConta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/salvar_button_text"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textCursorDrawable="@color/design_default_color_on_secondary"/>

    </LinearLayout>
</ScrollView>
