<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/iconlogo"
        android:layout_marginTop="120dp"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/username_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/forgot_password_text"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="@id/buttonLogin"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@id/buttonLogin"
            app:layout_constraintTop_toBottomOf="@id/buttonLogin"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login_button_text"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        android:textCursorDrawable="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"/>

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/colorSecundary"
            android:text="@string/cretelogin_button_text"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textCursorDrawable="@color/design_default_color_on_secondary"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


    </LinearLayout>
</ScrollView>
